// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/Steps/If Step Active 1`] = `
.c20 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c20 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c22 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c22 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #f86683;
}

.c13 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c24 .c12 {
  color: #fff;
}

.c25 .c12 {
  color: #6e849a;
}

.c18 {
  display: inline-block;
  padding: 0px 4px 1px 4px;
  color: #62778c;
  font-weight: 600;
  font-size: 14px;
  background-color: #eef4f6a8;
  border-radius: 7px;
  border: 1px solid #dfe5ea;
  cursor: default;
  line-height: 20px;
  text-align: center;
}

.c18.default {
  color: #62778c;
}

.c19 {
  display: inline-block;
  vertical-align: middle;
}

.c26 .c12 {
  display: inline-block;
  margin-left: 12px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 .c9:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c6 .c7:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c6 .c31 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c6,
.vf-canvas__step.vf-canvas__node--highlighted .c6 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c6:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c6 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c6 {
  z-index: -1;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c15 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c21 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c21 {
  cursor: crosshair;
}

.vf-canvas--merging .c21,
.vf-canvas--selecting-group .c21,
.vf-canvas__node--disabled .c21 {
  cursor: inherit;
}

.c21::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c21.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c23 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c23 {
  cursor: crosshair;
}

.vf-canvas--merging .c23,
.vf-canvas--selecting-group .c23,
.vf-canvas__node--disabled .c23 {
  cursor: inherit;
}

.c23::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c23.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c5:not(:last-of-type) {
  padding-bottom: 6px;
}

.c1 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c1 {
  cursor: crosshair;
}

.c1::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

#vf-canvas:not(.vf-canvas--selecting-group) .vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c1:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered .c1 {
  cursor: copy;
}

#vf-canvas.vf-canvas--selecting-group .c1 {
  cursor: inherit;
}

.vf-canvas__node--focused .c1::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c1,
.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c1::before,
.vf-canvas__node--highlighted .c1::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c1 {
  opacity: 0.7;
  cursor: not-allowed;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) {
  opacity: 0.7;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.vf-canvas--markup .c1 {
  pointer-events: none !important;
}

.c1 .c31 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c27 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c28 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c29 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c30 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 100%;
}

.vf-canvas--merging .c4,
.vf-canvas--selecting-group .c4,
.vf-canvas--creating-link .c4 {
  pointer-events: none;
}

.c4 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c4 input:active {
  background: transparent;
}

.vf-canvas--commenting .c4 input {
  cursor: crosshair;
}

.c4 .vf-canvas__node--active input {
  color: #132144;
}

.c2 {
  position: relative;
}

.c16 .c17 {
  display: inline;
  padding: 0;
  border: none;
  background: none;
  color: #132144;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
}

<div
  className="c0 c1 vf-canvas__block"
>
  <div
    className="c2 vf-canvas__block__section"
  >
    <div
      className="c3"
    >
      <div
        className="c4 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="If Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          If Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c5 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c6"
        >
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c13"
                  color="#f86683"
                  size={16}
                >
                  <svg
                    data-file-name="SvgIf"
                  />
                </span>
              </div>
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  <div
                    className="c16 expressionfy"
                  >
                     
                    <span
                      className="brackets"
                    >
                      <span
                        className="c17 c18"
                      >
                        {timestamp}
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="less"
                      >
                        <span
                          className="c19 plus"
                        >
                          <span
                            className="c12 c20"
                            color="currentColor"
                            size={16}
                          >
                            <svg
                              data-file-name="SvgLess"
                            />
                          </span>
                        </span>
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="math value"
                      >
                        212
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <div
                className="c21 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              />
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  <div
                    className="c16 expressionfy"
                  >
                     
                    <span
                      className="math brackets"
                    >
                      <span
                        className="math value"
                      >
                        4
                      </span>
                       
                      <span
                        className="c19 plus"
                      >
                        <span
                          className="c12 c20"
                          color="currentColor"
                          size={16}
                        >
                          <svg
                            data-file-name="SvgDivide"
                          />
                        </span>
                      </span>
                       
                      <span
                        className="brackets"
                      >
                        <span
                          className="parenthesis"
                        >
                          ( 
                        </span>
                        <span
                          className="math value"
                        >
                          5
                        </span>
                        <span>
                           
                        </span>
                        <span
                          className="or"
                        >
                          <span
                            className="c19 plus"
                          >
                            <span>
                              OR
                            </span>
                          </span>
                        </span>
                        <span>
                           
                        </span>
                        <span
                          className="math brackets"
                        >
                          
                          <span
                            className="c17 c18"
                          >
                            {sessions}
                          </span>
                          .includes('en')
                        </span>
                        <span
                          className="parenthesis"
                        >
                           )
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <div
                className="c21 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              />
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  <div
                    className="c16 expressionfy"
                  >
                     
                    <span
                      className="brackets"
                    >
                      <span
                        className="c17 c18"
                      >
                        {timestamp}
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="less"
                      >
                        <span
                          className="c19 plus"
                        >
                          <span
                            className="c12 c20"
                            color="currentColor"
                            size={16}
                          >
                            <svg
                              data-file-name="SvgLess"
                            />
                          </span>
                        </span>
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="math value"
                      >
                        212
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <div
                className="c21 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c22"
                  color="#6e849a"
                  size={16}
                >
                  <svg
                    data-file-name="SvgElse"
                  />
                </span>
              </div>
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Else
                </div>
              </span>
              <div
                className="c23 vf-canvas__port"
                color="#8da2b5"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/If Step Empty 1`] = `
.c16 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c16 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #f86683;
}

.c13 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c19 .c12 {
  color: #fff;
}

.c20 .c12 {
  color: #6e849a;
}

.c21 .c12 {
  display: inline-block;
  margin-left: 12px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 .c9:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c6 .c7:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c6 .c26 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c6,
.vf-canvas__step.vf-canvas__node--highlighted .c6 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c6:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c6 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c6 {
  z-index: -1;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #8da2b5;
}

.c17 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c15 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c18 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c18 {
  cursor: crosshair;
}

.vf-canvas--merging .c18,
.vf-canvas--selecting-group .c18,
.vf-canvas__node--disabled .c18 {
  cursor: inherit;
}

.c18::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c18.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c5:not(:last-of-type) {
  padding-bottom: 6px;
}

.c1 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c1 {
  cursor: crosshair;
}

.c1::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

#vf-canvas:not(.vf-canvas--selecting-group) .vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c1:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered .c1 {
  cursor: copy;
}

#vf-canvas.vf-canvas--selecting-group .c1 {
  cursor: inherit;
}

.vf-canvas__node--focused .c1::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c1,
.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c1::before,
.vf-canvas__node--highlighted .c1::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c1 {
  opacity: 0.7;
  cursor: not-allowed;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) {
  opacity: 0.7;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.vf-canvas--markup .c1 {
  pointer-events: none !important;
}

.c1 .c26 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c22 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c23 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c24 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c25 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 100%;
}

.vf-canvas--merging .c4,
.vf-canvas--selecting-group .c4,
.vf-canvas--creating-link .c4 {
  pointer-events: none;
}

.c4 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c4 input:active {
  background: transparent;
}

.vf-canvas--commenting .c4 input {
  cursor: crosshair;
}

.c4 .vf-canvas__node--active input {
  color: #132144;
}

.c2 {
  position: relative;
}

<div
  className="c0 c1 vf-canvas__block"
>
  <div
    className="c2 vf-canvas__block__section"
  >
    <div
      className="c3"
    >
      <div
        className="c4 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="If Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          If Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c5 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c6"
        >
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c13"
                  color="#f86683"
                  size={16}
                >
                  <svg
                    data-file-name="SvgIf"
                  />
                </span>
              </div>
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Add IF statement
                </div>
              </span>
            </div>
          </section>
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c16"
                  color="#6e849a"
                  size={16}
                >
                  <svg
                    data-file-name="SvgElse"
                  />
                </span>
              </div>
              <span
                className="c17"
              >
                <div
                  className="c15"
                >
                  Else
                </div>
              </span>
              <div
                className="c18 vf-canvas__port"
                color="#8da2b5"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/If Step Multiple 1`] = `
.c20 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c20 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c22 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c22 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #f86683;
}

.c13 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c24 .c12 {
  color: #fff;
}

.c25 .c12 {
  color: #6e849a;
}

.c18 {
  display: inline-block;
  padding: 0px 4px 1px 4px;
  color: #62778c;
  font-weight: 600;
  font-size: 14px;
  background-color: #eef4f6a8;
  border-radius: 7px;
  border: 1px solid #dfe5ea;
  cursor: default;
  line-height: 20px;
  text-align: center;
}

.c18.default {
  color: #62778c;
}

.c19 {
  display: inline-block;
  vertical-align: middle;
}

.c26 .c12 {
  display: inline-block;
  margin-left: 12px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 .c9:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c6 .c7:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c6 .c31 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c6,
.vf-canvas__step.vf-canvas__node--highlighted .c6 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c6:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c6 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c6 {
  z-index: -1;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c15 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c21 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c21 {
  cursor: crosshair;
}

.vf-canvas--merging .c21,
.vf-canvas--selecting-group .c21,
.vf-canvas__node--disabled .c21 {
  cursor: inherit;
}

.c21::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c21.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c23 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c23 {
  cursor: crosshair;
}

.vf-canvas--merging .c23,
.vf-canvas--selecting-group .c23,
.vf-canvas__node--disabled .c23 {
  cursor: inherit;
}

.c23::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c23.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c5:not(:last-of-type) {
  padding-bottom: 6px;
}

.c1 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c1 {
  cursor: crosshair;
}

.c1::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

#vf-canvas:not(.vf-canvas--selecting-group) .vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c1:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered .c1 {
  cursor: copy;
}

#vf-canvas.vf-canvas--selecting-group .c1 {
  cursor: inherit;
}

.vf-canvas__node--focused .c1::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c1,
.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c1::before,
.vf-canvas__node--highlighted .c1::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c1 {
  opacity: 0.7;
  cursor: not-allowed;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) {
  opacity: 0.7;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.vf-canvas--markup .c1 {
  pointer-events: none !important;
}

.c1 .c31 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c27 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c28 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c29 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c30 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 100%;
}

.vf-canvas--merging .c4,
.vf-canvas--selecting-group .c4,
.vf-canvas--creating-link .c4 {
  pointer-events: none;
}

.c4 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c4 input:active {
  background: transparent;
}

.vf-canvas--commenting .c4 input {
  cursor: crosshair;
}

.c4 .vf-canvas__node--active input {
  color: #132144;
}

.c2 {
  position: relative;
}

.c16 .c17 {
  display: inline;
  padding: 0;
  border: none;
  background: none;
  color: #132144;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
}

<div
  className="c0 c1 vf-canvas__block"
>
  <div
    className="c2 vf-canvas__block__section"
  >
    <div
      className="c3"
    >
      <div
        className="c4 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="If Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          If Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c5 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c6"
        >
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c13"
                  color="#f86683"
                  size={16}
                >
                  <svg
                    data-file-name="SvgIf"
                  />
                </span>
              </div>
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  <div
                    className="c16 expressionfy"
                  >
                     
                    <span
                      className="brackets"
                    >
                      <span
                        className="c17 c18"
                      >
                        {timestamp}
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="less"
                      >
                        <span
                          className="c19 plus"
                        >
                          <span
                            className="c12 c20"
                            color="currentColor"
                            size={16}
                          >
                            <svg
                              data-file-name="SvgLess"
                            />
                          </span>
                        </span>
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="math value"
                      >
                        212
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <div
                className="c21 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              />
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  <div
                    className="c16 expressionfy"
                  >
                     
                    <span
                      className="math brackets"
                    >
                      <span
                        className="math value"
                      >
                        4
                      </span>
                       
                      <span
                        className="c19 plus"
                      >
                        <span
                          className="c12 c20"
                          color="currentColor"
                          size={16}
                        >
                          <svg
                            data-file-name="SvgDivide"
                          />
                        </span>
                      </span>
                       
                      <span
                        className="brackets"
                      >
                        <span
                          className="parenthesis"
                        >
                          ( 
                        </span>
                        <span
                          className="math value"
                        >
                          5
                        </span>
                        <span>
                           
                        </span>
                        <span
                          className="or"
                        >
                          <span
                            className="c19 plus"
                          >
                            <span>
                              OR
                            </span>
                          </span>
                        </span>
                        <span>
                           
                        </span>
                        <span
                          className="math brackets"
                        >
                          
                          <span
                            className="c17 c18"
                          >
                            {sessions}
                          </span>
                          .includes('en')
                        </span>
                        <span
                          className="parenthesis"
                        >
                           )
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <div
                className="c21 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              />
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  <div
                    className="c16 expressionfy"
                  >
                     
                    <span
                      className="brackets"
                    >
                      <span
                        className="c17 c18"
                      >
                        {timestamp}
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="less"
                      >
                        <span
                          className="c19 plus"
                        >
                          <span
                            className="c12 c20"
                            color="currentColor"
                            size={16}
                          >
                            <svg
                              data-file-name="SvgLess"
                            />
                          </span>
                        </span>
                      </span>
                      <span>
                         
                      </span>
                      <span
                        className="math value"
                      >
                        212
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <div
                className="c21 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c22"
                  color="#6e849a"
                  size={16}
                >
                  <svg
                    data-file-name="SvgElse"
                  />
                </span>
              </div>
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Else
                </div>
              </span>
              <div
                className="c23 vf-canvas__port"
                color="#8da2b5"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/Steps/If Step Single 1`] = `
.c18 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: currentColor;
}

.c18 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c22 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c22 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c13 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #f86683;
}

.c13 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c24 .c12 {
  color: #fff;
}

.c25 .c12 {
  color: #6e849a;
}

.c20 {
  display: inline-block;
  padding: 0px 4px 1px 4px;
  color: #62778c;
  font-weight: 600;
  font-size: 14px;
  background-color: #eef4f6a8;
  border-radius: 7px;
  border: 1px solid #dfe5ea;
  cursor: default;
  line-height: 20px;
  text-align: center;
}

.c20.default {
  color: #62778c;
}

.c17 {
  display: inline-block;
  vertical-align: middle;
}

.c26 .c12 {
  display: inline-block;
  margin-left: 12px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 22px;
  margin-right: 16px;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  min-height: 54px;
  padding: 16px 16px 16px 22px;
  width: 100%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c8 .c9:not(:first-of-type)::before {
  position: absolute;
  top: -1px;
  height: 1px;
  left: 52px;
  right: 0;
  content: '';
  border-top: 1px solid #eaeff4;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 54px;
  border-radius: 5px;
  background-color: #fff;
  border: 1px solid #d3d9e4;
}

.c6 .c7:not(:first-of-type) {
  border-top: 1px solid #eaeff4;
}

.c6 .c31 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.vf-canvas__step.vf-canvas__node--active .c6,
.vf-canvas__step.vf-canvas__node--highlighted .c6 {
  border: 1px solid #5D9DF5;
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--disabled .c6:hover {
  opacity: 0.7;
  cursor: not-allowed;
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px rgba(17,49,96,0.08);
}

.vf-canvas--creating-link .vf-canvas__step.vf-canvas__node--hovered .c6 {
  box-shadow: 0 1px 3px 0 rgba(17,49,96,0.06),0 0 0 1px #5D9DF5;
  cursor: copy;
}

.vf-canvas__block.vf-canvas__node--merge-target .c6 {
  z-index: -1;
}

.c14 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #62778c;
}

.c15 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c21 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c21 {
  cursor: crosshair;
}

.vf-canvas--merging .c21,
.vf-canvas--selecting-group .c21,
.vf-canvas__node--disabled .c21 {
  cursor: inherit;
}

.c21::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #6e849a;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #6e849a;
  border: 4px solid white;
}

.c21.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c23 {
  position: relative;
  height: 54px;
  width: 42px;
  margin: -16px -16px -16px 0;
  padding-left: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  cursor: copy;
}

.vf-canvas--commenting .c23 {
  cursor: crosshair;
}

.vf-canvas--merging .c23,
.vf-canvas--selecting-group .c23,
.vf-canvas__node--disabled .c23 {
  cursor: inherit;
}

.c23::before {
  position: absolute;
  display: block;
  content: '';
  top: 50%;
  left: 19px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  box-sizing: content-box;
  box-shadow: 0 0 0 1px #8da2b5;
  border-radius: 50%;
  height: 5px;
  width: 5px;
  background-color: #8da2b5;
  border: 4px solid white;
}

.c23.vf-canvas__port--highlighted::before {
  box-shadow: 0 0 0 1px #5d9df5;
  background-color: #5d9df5;
}

.c5:not(:last-of-type) {
  padding-bottom: 6px;
}

.c1 {
  width: 330px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,#EBEFF4,#e7eaf1);
  position: relative;
  opacity: 1;
  border-color: none;
  -webkit-transition: opacity 0.15s ease;
  transition: opacity 0.15s ease;
}

.vf-canvas--commenting .c1 {
  cursor: crosshair;
}

.c1::before {
  display: block;
  border-radius: 8px;
  position: absolute;
  top: -3px;
  left: -3px;
  right: -3px;
  bottom: -3px;
  border: 1px solid #D4D9E0;
  content: '';
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

#vf-canvas:not(.vf-canvas--selecting-group) .vf-canvas__node:not(.vf-canvas__node--disabled):not(.vf-canvas__node--focused) .c1:hover::before {
  box-shadow: 0 4px 8px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered .c1 {
  cursor: copy;
}

#vf-canvas.vf-canvas--selecting-group .c1 {
  cursor: inherit;
}

.vf-canvas__node--focused .c1::before {
  box-shadow: 0 12px 32px 0 rgba(17,49,96,0.2);
  border-color: #C5CBD6;
}

.vf-canvas__node--selected .c1,
.vf-canvas__node--highlighted .c1,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1 {
  border-color: #5d9df5;
}

.vf-canvas__node--selected .c1::before,
.vf-canvas__node--highlighted .c1::before,
.vf-canvas__node--hovered:not(.vf-canvas__node--disabled) .c1::before {
  display: none;
}

.vf-canvas--creating-link .vf-canvas__node--disabled .c1 {
  opacity: 0.7;
  cursor: not-allowed;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active) {
  opacity: 0.7;
}

.c1 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.vf-canvas--markup .c1 {
  pointer-events: none !important;
}

.c1 .c31 {
  position: absolute;
  top: 6px;
  left: 6px;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 99;
}

.c27 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c28 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c29 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c30 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):not(.vf-canvas__node--merge-target) .c0 .vf-canvas--activation .vf-canvas__node:not(.vf-canvas__node--active):hover {
  opacity: 1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 50px;
  text-overflow: ellipsis;
}

.c4 {
  max-width: 100%;
}

.vf-canvas--merging .c4,
.vf-canvas--selecting-group .c4,
.vf-canvas--creating-link .c4 {
  pointer-events: none;
}

.c4 input {
  max-width: 100%;
  box-sizing: content-box !important;
  -webkit-transition: background 0.15s ease;
  transition: background 0.15s ease;
  font-size: 15px;
  font-weight: 600;
  padding: 0 5px;
  text-align: center;
  border: none;
  white-space: nowrap;
  background: transparent;
  border-radius: 3px;
  outline: none;
  text-overflow: ellipsis;
  cursor: text;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #62778c;
}

.c4 input:active {
  background: transparent;
}

.vf-canvas--commenting .c4 input {
  cursor: crosshair;
}

.c4 .vf-canvas__node--active input {
  color: #132144;
}

.c2 {
  position: relative;
}

.c16 .c19 {
  display: inline;
  padding: 0;
  border: none;
  background: none;
  color: #132144;
  line-height: inherit;
  font-size: inherit;
  font-weight: inherit;
}

<div
  className="c0 c1 vf-canvas__block"
>
  <div
    className="c2 vf-canvas__block__section"
  >
    <div
      className="c3"
    >
      <div
        className="c4 vf-canvas__block__section__title"
        style={
          Object {
            "boxSizing": "content-box",
            "display": "inline-block",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onKeyPress={[Function]}
          onMouseUp={[Function]}
          readOnly={true}
          style={
            Object {
              "boxSizing": "content-box",
              "width": "1px",
            }
          }
          tabIndex={-1}
          value="If Block"
        />
        <div
          style={
            Object {
              "height": 0,
              "left": 0,
              "overflow": "scroll",
              "position": "absolute",
              "top": 0,
              "visibility": "hidden",
              "whiteSpace": "pre",
            }
          }
        >
          If Block
        </div>
      </div>
    </div>
    <section>
      <div
        className="c5 vf-canvas__step"
        onMouseDown={[Function]}
      >
        <div
          className="c6"
        >
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c13"
                  color="#f86683"
                  size={16}
                >
                  <svg
                    data-file-name="SvgIf"
                  />
                </span>
              </div>
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  <div
                    className="c16 expressionfy"
                  >
                     
                    <span
                      className="math brackets"
                    >
                      <span
                        className="math value"
                      >
                        4
                      </span>
                       
                      <span
                        className="c17 plus"
                      >
                        <span
                          className="c12 c18"
                          color="currentColor"
                          size={16}
                        >
                          <svg
                            data-file-name="SvgDivide"
                          />
                        </span>
                      </span>
                       
                      <span
                        className="brackets"
                      >
                        <span
                          className="parenthesis"
                        >
                          ( 
                        </span>
                        <span
                          className="math value"
                        >
                          5
                        </span>
                        <span>
                           
                        </span>
                        <span
                          className="or"
                        >
                          <span
                            className="c17 plus"
                          >
                            <span>
                              OR
                            </span>
                          </span>
                        </span>
                        <span>
                           
                        </span>
                        <span
                          className="math brackets"
                        >
                          
                          <span
                            className="c19 c20"
                          >
                            {sessions}
                          </span>
                          .includes('en')
                        </span>
                        <span
                          className="parenthesis"
                        >
                           )
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </span>
              <div
                className="c21 vf-canvas__port"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
          <section
            className="c7 c8"
          >
            <div
              className="c9 c10"
            >
              <div
                className="c11"
              >
                <span
                  className="c12 c22"
                  color="#6e849a"
                  size={16}
                >
                  <svg
                    data-file-name="SvgElse"
                  />
                </span>
              </div>
              <span
                className="c14"
              >
                <div
                  className="c15"
                >
                  Else
                </div>
              </span>
              <div
                className="c23 vf-canvas__port"
                color="#8da2b5"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
              />
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</div>
`;
